--- a/go-server/static/index.html
+++ b/go-server/static/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Static website</title>
+    <title>Static website</title>
     </head>
     <body>
         <h1>Static website</h1>
